--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "axois": "^0.0.1-security",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
